AssociationDefn is no longer a kind of datum declaration, but a link between datums of two types. Elaborated Views and their DatumProjectionExpr notion.